Dont follow mouse

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -46,7 +46,7 @@ bindsym XF86MonBrightnessUp exec --no-startup-id brightnessctl set +5%
 bindsym XF86MonBrightnessDown exec --no-startup-id brightnessctl set 5%-
 
 # Take screenshot and save to clipboard with maim
-bindsym Print exec --no-startup-id maim -s | xclip -selection clipboard -t image/png
+bindsym Print exec --no-startup-id maim -s | tee ~/Pictures/Screenshots/$(date +%s).png | xclip -selection clipboard -t image/png
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -252,4 +252,7 @@ bar {
 
   status_command i3status
 }
+
+# Dont follow mouse
+focus_follows_mouse no
 
